--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -25,4 +25,11 @@
              android:primary="true"
              android:removable="false"
              android:allowMassStorage="true" />
+
+    <!-- external usb storage -->
+    <storage android:mountPoint="/storage/usbdisk"
+             android:storageDescription="@string/storage_usb"
+             android:primary="false"
+             android:removable="true" />
+
 </StorageList>
