aries:UMS is deprecated
    * UMS is buggy and deprecated. Disable it.

    Originally done on multiple Samsungs by Steve Kondik

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -24,7 +24,7 @@
              android:storageDescription="@string/storage_internal"
              android:primary="true"
              android:removable="false"
-             android:allowMassStorage="true" />
+             android:allowMassStorage="false" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
