Initial bringup for android 4.4 kitkat
N/A

 - Set default wallpaper from Nexus 5
 - init: change owner of kgsl/proc debugfs directory to system
 - wlan: Update supplicant services for new calling sequence
 - Fix the modem crash on encryption phone
   There is an efs sync problem because of class type of rmt_storage service.
   When encrypting phone, modem crash may occur due to not being able to sync
   properly between AP and CP. So, rmt_storage class should be a core class.
 - Default Launcher3
Signed-off-by: huangqiwu <huangqiwu@xiaomi.com>

Change-Id: Ia2359ab945204225541c034e60240ba7d1ccffaf

--- a/overlay/packages/services/Telephony/res/xml/cdma_options.xml
+++ b/overlay/packages/services/Telephony/res/xml/cdma_options.xml
@@ -50,4 +50,13 @@
             <extra android:name="autoStart" android:value="true" />
         </intent>
     </PreferenceScreen>
+
+    <PreferenceScreen
+        android:key="carrier_settings_key"
+        android:title="@string/carrier_settings_title">
+        <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="@string/carrier_settings"
+                android:targetClass="@string/carrier_settings_menu" />
+    </PreferenceScreen>
+
 </PreferenceScreen>
