--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -245,10 +245,10 @@
     <bool name="config_enableLockScreenTranslucentDecor">true</bool>
 
     <string-array name="config_locationProviderPackageNames" translatable="false">
+        <!-- The Google provider -->
+        <item>com.google.android.gms</item>
         <!-- The standard AOSP fused location provider -->
         <item>com.android.location.fused</item>
-        <!-- The Google provider -->
-        <item>com.google.android.location</item>
     </string-array>
 
 </resources>
