--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -241,4 +241,6 @@
         <item>com.android.location.fused</item>
     </string-array>
 
+    <bool name="config_disableMenuKeyInLockScreen">true</bool>
+
 </resources>
