--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -243,4 +243,6 @@
 
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
 
+    <bool name="config_cellBroadcastAppLinks">true</bool>
+
 </resources>
